updated /authuser and /user route names as plural
